#1602 - Upgrade dependencies
- xmlunit 2.10.0 -> 2.11.0
- spring 5.3.37 -> 7.0.1
- Formatting
- Disable caching in ResourceCollectionReaderBase